--- a/views/admin/visits/visits.ejs
+++ b/views/admin/visits/visits.ejs
@@ -5,7 +5,7 @@
     <%- include('../../includes/navigation'); -%>
     <%- include('../../includes/flashErrors'); -%>
 <main class="container">
-    <div class="d-grid  d-md-flex justify-content-md-end my-3">
+    <div class="d-grid  d-md-flex justify-content-md-end  my-3">
       <button type="button" class="btn btn-primary d-flex align-items-center" data-bs-toggle="modal" data-bs-target="#filterModel" id="filterButton">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-funnel me-1" viewBox="0 0 16 16">
             <path d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5v-2zm1 .5v1.308l4.372 4.858A.5.5 0 0 1 7 8.5v5.306l2-.666V8.5a.5.5 0 0 1 .128-.334L13.5 3.308V2h-11z"/>
@@ -26,6 +26,9 @@
           </tr>
         </thead>
         <tbody class="table-group-divider">
+          <% if (visits.length === 0) { %>
+           <p class="text-danger"><strong>We couldn't find any records</strong></p>
+          <% } %>
             <% let count = 0;visits.forEach(visit=>{++count; %>
                 <tr>
                     <th scope="row"><%= count %> </th>
