--- a/views/visit/status.ejs
+++ b/views/visit/status.ejs
@@ -4,26 +4,23 @@
 <body class="home">
   <%- include('../includes/navigation'); -%>
   <%- include('../includes/flashErrors'); -%>
-  <div class="d-flex flex-column mx-3">
-      <p class="mx-3 h3 text-center"><%= visit.store.storeName.toUpperCase() %> </p>
-      <button class="btn btn-primary d-flex justify-content-center align-items-center m-1" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle me-1" viewBox="0 0 16 16">
-            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-        </svg>
-        Create status
-      </button>
-      <button type="button" class="btn btn-outline-danger d-flex justify-content-center align-items-center m-1" data-bs-toggle="modal" data-bs-target="#closeModel" id="closeButton" data-visit-name="<%= visit.store.storeName %>" data-visit-id="<%= visit._id %>"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle me-2" viewBox="0 0 16 16">
+  <div class="d-flex flex-row align-items-center justify-content-center mx-1">
+      <button class="btn btn-primary d-flex justify-content-center align-items-center me-1" data-bs-toggle="modal" data-bs-target="#staticBackdrop"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle me-2" viewBox="0 0 16 16">
+        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+      </svg>Status</button>
+      <button type="button" class="btn btn-outline-danger d-flex justify-content-center align-items-center ms-1" data-bs-toggle="modal" data-bs-target="#closeModel" id="closeButton" data-visit-name="<%= visit.store.storeName %>" data-visit-id="<%= visit._id %>"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle me-2" viewBox="0 0 16 16">
         <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
         <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
       </svg>
-      Close Visit</button>
+      Close</button>
   </div>
   <hr>
   <% if (statuses.length === 0) { %>
-    <p class="mx-3 h4 text-center">Start your journey by clicking the above button <b class="text-primary">Create status</b></p>
+    <p class="mx-3 h6 text-center"><%= visit.store.storeName %> </p>
+    <p class="mx-3 h6 text-center">Start your journey by clicking the above button <b class="text-primary">Create Status</b></p>
   <% } else { %>
-    <p class="mx-3 h3 text-primary">Material Status:</p>
+    <p class="mx-3 h5 text-primary"> <%= visit.store.storeName %> Material Status:</p>
   <% } %>
    
   <div class="accordion m-3" id="accordionExample">
