--- a/views/admin/visits/visits.ejs
+++ b/views/admin/visits/visits.ejs
@@ -5,7 +5,18 @@
     <%- include('../../includes/navigation'); -%>
     <%- include('../../includes/flashErrors'); -%>
 <main class="container">
-    <div class="d-grid  d-md-flex justify-content-md-end  my-3">
+    <div class="d-grid  d-flex justify-content-between  my-3">
+      <div>
+        <% if (queryParams["store.storeId"]) { %>
+          <span class="badge bg-secondary">Store</span>
+        <% } %>
+        <% if (queryParams["user.userId"]) { %>
+          <span class="badge bg-secondary">User</span>
+        <% } %>
+        <% if (queryParams["state"]) { %>
+          <span class="badge bg-secondary">State</span>
+        <% } %>
+      </div>
       <button type="button" class="btn btn-primary d-flex align-items-center" data-bs-toggle="modal" data-bs-target="#filterModel" id="filterButton">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-funnel me-1" viewBox="0 0 16 16">
             <path d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5v-2zm1 .5v1.308l4.372 4.858A.5.5 0 0 1 7 8.5v5.306l2-.666V8.5a.5.5 0 0 1 .128-.334L13.5 3.308V2h-11z"/>
@@ -79,41 +90,51 @@
           <h5 class="modal-title" id="filterModelLabel">Filters</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="modal-body">
-            <div class="input-group mb-3">
-                <label class="input-group-text" for="inputGroupSelect01">Store</label>
-                    <select class="form-select" id="inputGroupSelect01">
-                        <option selected disabled hidden>Select a Store</option>
-                        <% stores.forEach(store => { %>
-                            <option value="<%= store._id %>"><%= store.name %></option>
-                        <% }) %>
-                    </select>
-              </div>
+        <form action="/admin/visits" method="GET" id="filterForm">
+          <div class="modal-body">
               <div class="input-group mb-3">
-                <label class="input-group-text" for="inputGroupSelect01">User</label>
-                    <select class="form-select" id="inputGroupSelect01">
-                        <option selected disabled hidden>Select a User</option>
-                        <% users.forEach(user => { %>
-                            <option value="<%= user._id %>"><%= user.name %></option>
-                        <% }) %>
-                    </select>
-              </div>
-              <div class="input-group mb-3">
-                <label class="input-group-text" for="inputGroupSelect01">State</label>
-                    <select class="form-select" id="inputGroupSelect01">
-                        <option selected disabled hidden>Select a State</option>
-                        <option value="open">Open</option>
-                        <option value="close">Close</option>
-                    </select>
-              </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
-          <form action="/admin/visits/filter" method="POST" id="deleteForm">
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <button type="submit" class="btn btn-outline-primary">Apply Filters</button>
-        </form>
-        </div>
+                  <label class="input-group-text" for="inputGroupSelect01">Store</label>
+                      <select class="form-select" id="inputGroupSelect01" name="store.storeId">
+                          <option selected disabled hidden>Select a Store</option>
+                          <% stores.forEach(store => { %>
+                              <option value="<%= store._id %>"><%= store.name %></option>
+                          <% }) %>
+                      </select>
+                </div>
+                <div class="input-group mb-3">
+                  <label class="input-group-text" for="inputGroupSelect02">User</label>
+                      <select class="form-select" id="inputGroupSelect02" name="user.userId">
+                          <option selected disabled hidden>Select a User</option>
+                          <% users.forEach(user => { %>
+                              <option value="<%= user._id %>"><%= user.name %></option>
+                          <% }) %>
+                      </select>
+                </div>
+                <div class="input-group mb-3">
+                  <label class="input-group-text" for="inputGroupSelect03">State</label>
+                      <select class="form-select" id="inputGroupSelect03" name="state">
+                          <option selected disabled hidden>Select a State</option>
+                          <option value="open">Open</option>
+                          <option value="close">Close</option>
+                      </select>
+                </div>
+                <div class="mb-3">
+                  <label class="form-label" for="from">Created: Start - End </label>
+                  <input type="date" class="form-control mb-1" name="createdFrom" id="createdFrom">
+                  <input type="date" class="form-control mb-1" name="createdTo" id="createdTo">
+                </div>
+                <div class="mb-3">
+                  <label class="form-label" for="from">Closed: Start - End </label>
+                  <input type="date" class="form-control mb-1" name="closedFrom" id="closedFrom">
+                  <input type="date" class="form-control mb-1" name="closedTo" id="closedTo">
+                </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+             
+              <button type="submit" class="btn btn-outline-primary">Apply Filters</button>
+          </div>
+      </form>
       </div>
     </div>
   </div>
