--- a/views/admin/visits/visits.ejs
+++ b/views/admin/visits/visits.ejs
@@ -90,7 +90,7 @@
           <h5 class="modal-title" id="filterModelLabel">Filters</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <form action="/admin/visits" method="GET" id="filterForm">
+        <form action="/admin/visits" method="POSt" id="filterForm">
           <div class="modal-body">
               <div class="input-group mb-3">
                   <label class="input-group-text" for="inputGroupSelect01">Store</label>
@@ -130,6 +130,7 @@
                 </div>
           </div>
           <div class="modal-footer">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
              
               <button type="submit" class="btn btn-outline-primary">Apply Filters</button>
