--- a/views/status/addStatus.ejs
+++ b/views/status/addStatus.ejs
@@ -94,7 +94,7 @@
 
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="w-100 btn btn-lg btn-primary mt-3" type="submit">Create Status</button>
-            <a class="w-100 btn btn-lg btn-outline-secondary mt-3" href="/visit/<%= visitId %>/status">Cancel</a>
+            <a class="w-100 btn btn-lg btn-outline-secondary mt-3" href="/visit/<%= visitId %>/statues">Cancel</a>
         </form>
     </main>
 <script src="/js/addStatus.js"></script>
