--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -24,6 +24,9 @@
               <a class="nav-link <% if (url === "/admin/visits") { %> active <% } %>" href="/admin/visits">Visits</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link <% if (url === "/admin/statuses") { %> active <% } %>" href="/admin/statuses">Statuses</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link <% if (url === "/admin/users") { %> active <% } %>" href="/admin/users">Users</a>
             </li>
             <li class="nav-item">
